[build-system]
requires = [
    'setuptools',
    'wheel',
]

[tool.tidypy]
exclude = [
    'build/.*',
    'dist/.*',
]
vulture = {use = false}
pydocstyle = {use = false}

[tool.tidypy.pycodestyle]
disabled = [
    'W391',
]

[tool.tidypy.pylint]
disabled = [
    'missing-docstring',
    'trailing-newlines',
]

